<resources>
    <string name="app_name">Single Radio Pro</string>


    <!--Replace this with your base url-->
    <string name="base_url">"https://radio-single.multikhabar.com/api/"</string>

    <!--Replace this Admob app_ID with your App_ID generated from Admob-->
    <string name="adMob_app_id">ca-app-pub-3940256099942544~3347511713</string>

    <!--Replace with your banner and interestial ads ID created from Admob-->
    <string name="live_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interestial_live_ad_id">ca-app-pub-3940256099942544/1033173712</string>

    <!--Admob test banner and interestial ads ID-->
    <string name="test_banner_ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="interestial_test_ad_id">ca-app-pub-3940256099942544/1033173712</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="play">PLAY</string>
    <string name="stop">STOP</string>
    <string name="about_us">Quienes somos</string>
    <string name="share">Compartir</string>
    <string name="rate_us">Valutar</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="feedback">Contàctanos</string>
    <string name="notification">Notificaciòn</string>
    <string name="cancel">Cancel</string>


    <!--    exit dialog text-->
    <string name="exit_dialog_title">Are you sure?</string>
    <string name="exit_dialog_message">Exiting the app will stop the radio. Press MINIMIZE to play in background.</string>
    <string name="exit_dialog_message2">Press EXIT to quit application, press CANCEL to dismiss.</string>
    <string name="exit_positive_button">exit</string>
    <string name="exit_negative_button">minimize</string>
    <string name="exit_negative_button2">cancel</string>

    <!--    report dialog text-->
    <string name="report_title">Report Radio</string>
    <string name="report_msg">Your report will be sent for review. Press CANCEL to abort.</string>
    <string name="report">report</string>
    <string name="oops">Oops!!</string>
    <string name="no_results_found">No results found.</string>

    <!--    no connectivity dialog-->
    <string name="nc_dialog_title">No Connectivity!</string>
    <string name="nc_dialog_message">Please check your internet connection and try again.</string>
    <string name="nc_dialog_button">try again</string>
    <string name="submit">Submit</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>

    <!-- About US Text-->
    <string name="about">About</string>
    <string name="profile">Profile</string>
    <string name="version">Version</string>
    <string name="description">Description</string>
    <string name="yourcompany_gmail_com">yourcompany@gmail.com</string>
    <string name="about_description">Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero\'s De Finibus Bonorum et Malorum for use in a type specimen book.</string>

    <!--    response form-->
    <string name="error_format_invalid">Format is invalid</string>
    <string name="error_too_short">Too short</string>
    <string name="error_field_empty">Field is empty</string>

    <!--Social Media-->
    <string name="fb_page_username">w3cod3rs</string>
    <string name="fb_page_id">106864031155552</string>
    <string name="instagram_username">yourinstagramid</string>
    <string name="twitter_username">yourtwitterid</string>
    <string name="whatsApp_number">1234567890</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="acerca_de_nosotros">Acerca de nosotros</string>
    <string name="dark_mode">Dark mode</string>


</resources>