<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="viewModel"
            type="com.wecoders.singleradiopro.ui.feedback.FeedbackViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.feedback.FeedbackActivity">

        <include
            android:id="@+id/toolbar_layout"
            layout="@layout/layout_toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/email"
            style="@style/MyOutlineBox"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorText"
            app:error="@{viewModel.feedback.emailError}"
            android:textColorHint="@color/colorGrey"
            app:hintTextColor="@drawable/selector_input"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_layout">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@={viewModel.feedback.email}"
                app:onFocus="@{viewModel.onFocusEmail}"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/subjectTextField"
            style="@style/MyOutlineBox"
            android:textColorHint="@color/colorGrey"
            app:hintTextColor="@drawable/selector_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/subject"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorText"
            app:error="@{viewModel.feedback.subjectError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextField">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@={viewModel.feedback.subject}"
                app:onFocus="@{viewModel.onFocusSubject}"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/messageTextField"
            style="@style/MyOutlineBox"
            android:textColorHint="@color/colorGrey"
            app:hintTextColor="@drawable/selector_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/message"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorText"
            app:error="@{viewModel.feedback.messageError}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subjectTextField">


            <com.google.android.material.textfield.TextInputEditText
                style="@style/TextAppearance.MdcTypographyStyles.Body1"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:gravity="top"
                android:textColor="@color/colorTextPrimary"
                android:text="@={viewModel.feedback.message}"
                app:onFocus="@{viewModel.onFocusMessage}"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:enabled="@{viewModel.feedback.valid}"
            android:onClick="@{viewModel::onSubmit}"
            android:text="@string/submit"
            app:backgroundTint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageTextField" />



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
